feat: add branch module with controllers, services, models, and DTOs & Swagger docs
