# src/modules/branch/dtos/branch-query.dto.ts
@@ -1,0 +1,18 @@
+import { z } from 'zod';
+
+import { commonQueryDto } from '@/base/common/dtos';
+import { SortingUtils } from '@/base/common/utils';
+
+export const branchQueryDto = commonQueryDto
+  .extend({
+    sorting: SortingUtils.getSortingValueSchema([
+      'id',
+      'name',
+      'address',
+      'createTimestamp',
+      'deleteTimestamp',
+    ]),
+  })
+  .transform((payload) => SortingUtils.transformSorting(payload));
+
+export type BranchQueryDto = z.infer<typeof branchQueryDto>;
