# src/modules/branch/dtos/create-branch.dto.ts
@@ -1,0 +1,10 @@
+import { z } from 'zod';
+
+export const createBranchDto = z.object({
+  name: z.string().min(1, 'Name is required'),
+  address: z.string().nullable().optional(),
+  admin: z.string(),
+  services: z.array(z.string()).optional(),
+});
+
+export type CreateBranchDto = z.infer<typeof createBranchDto>;
